<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.testing.TestingFragment"
    android:id="@+id/fragment_testing">

    <TextView
        android:id="@+id/text_testing"
        android:layout_width="391dp"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_testing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:gravity="center_horizontal"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:adjustViewBounds="true"/>

        <ImageView
            android:id="@+id/image_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_asset_1"
            app:layout_constraintBottom_toBottomOf="@+id/image_testing"
            app:layout_constraintEnd_toEndOf="@+id/image_testing"
            app:layout_constraintStart_toStartOf="@+id/image_testing"
            app:layout_constraintTop_toTopOf="@+id/image_testing"
            android:visibility="invisible"/>
    </RelativeLayout>


    <Button
        android:id="@+id/scanButton2"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginStart="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="55dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/start_scan" />

    <Button
        android:id="@+id/locationButton"
        android:layout_width="195dp"
        android:layout_height="50dp"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="55dp"
        android:text="@string/get_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/scanButton2"
        tools:ignore="NotSibling"
        android:layout_marginStart="6dp" />
</androidx.constraintlayout.widget.ConstraintLayout>