<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mapping.MappingFragment"
    android:id="@+id/fragment_mapping">

    <TextView
        android:id="@+id/scan_text"
        android:layout_width="391dp"
        android:layout_height="250dp"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scrollbars="vertical" />

    <ImageView
        android:id="@+id/image_mapping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/uploadButton"
        android:adjustViewBounds="true" />

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@id/uploadButton"
        app:layout_constraintTop_toBottomOf="@id/image_mapping"
        app:layout_constraintStart_toStartOf="parent"/>


   <Button
       android:id="@+id/scanButton"
       android:layout_width="195dp"
       android:layout_height="50dp"
       android:layout_marginStart="6dp"
       android:layout_marginLeft="6dp"
       android:layout_marginBottom="55dp"
       app:layout_constraintLeft_toLeftOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:text="@string/start_scan" />

   <Button
       android:id="@+id/uploadButton"
       android:layout_width="195dp"
       android:layout_height="50dp"
       android:layout_marginLeft="6dp"
       android:layout_marginBottom="55dp"
       android:text="@string/upload"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintLeft_toRightOf="@id/scanButton"
       tools:ignore="NotSibling" />
</androidx.constraintlayout.widget.ConstraintLayout>