<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_mapping"
            android:title="@string/title_mapping" />

        <item
            android:id="@+id/navigation_testing"
            android:title="@string/title_testing" />

        <item
            android:id="@+id/navigation_floor_plans"
            android:title="@string/floor_plans"/>

        <item
            android:id="@+id/logout"
            android:title="Logout"/>
    </group>
</menu>